fix:detail 저장 nowrap

--- a/static/css/diaries_detail.css
+++ b/static/css/diaries_detail.css
@@ -409,6 +409,10 @@ button i {
   cursor: pointer;
 }
 
+.save-comment-btn{
+  white-space: nowrap;
+}
+
 .comment-edit-btn, .comment-del-btn{
   font-size: var(--font-size-normal);
 }
